# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Fixed
- [API_PARSER] [TRENDMICRO_VISIONONE] Last api call was not updated

## [2.26.0] - 2025-05-16
### Added
- [API_PARSER] [HORNETSECURITY] New collector
- [GUI] Middle click to edit an object in a new tab
- [SCRIPT] [WIPE] New script to reset a bootstrapped node
### Fixed
- [PORTAL] [SELF_SERVICE] Disabled workflows listed
- [MONGODB] Allow clusters with more than 7 nodes
- [SERVICES] [FRONTEND] Correctly get Darwin objects when building rsyslog configurations
- [GUI] [RSYSLOG] Bring more details on GUI when configuration builds fail
- [SERVICES] [FRONTEND] Improve deletion messages and conditions on GUI and API
- [API_PARSER] Ensure modifications in configuration are not overriden by running instances
- [API_PARSER] [NOZOMI_PROBE] Fix type error when the field total is null
- [API_PARSER] [ARMIS_CENTRIX] Fix condition to ask for a new token
- [FRONTEND] Hot-disable a collector manually
- [SERVICES] Prevent errors when deleted configuration files do not exist
- [CLUSTER_JOIN] Fix writing of certificates on new node's disk
- [REDIS] Use proper Sentinel client when updating service
### Changed
- [API_PARSER] [CROWDSTRIKE] Evolve collector to use API v2 instead of v1
- [API_PARSER] [ARMIS_CENTRIX] Collect at max 1h of range to avoid API taking too long to answer
- [API_PARSER] [BEYONDTRUST_REPORTINGS] Add session_details in logs and split them
- [FILEBEAT] Separate building configurations and restarting service
- [GUI] Improve AJAX requests management
- [CLUSTER] Improve node import routine
- [CLUSTER] Improve node deletion from the gui
- [DEPENDENCIES]
  - certifi 2024.12.14 -> 2025.4.26
  - django 4.2.20 -> 4.2.21
  - maxminddb 2.5.2 -> 2.7.0
  - requests 2.31.0 0 -> 2.32.3